[Add] Get word by Id